Partially refactored
