# Rating API/internal/controllers/ratings/create_rating.go
@@ -13,7 +13,7 @@ import (
 // @Tags         ratings
 // @Summary      Create a rating.
 // @Description  Create a rating. UUID is automatically generated
-// @Success      200
+// @Success      201            {object}  models.Rating
 // @Failure      422            "Cannot parse id"
 // @Failure      500            "Something went wrong"
 // @Router       /ratings       [post]
@@ -23,11 +23,12 @@ func CreateRating(w http.ResponseWriter, r *http.Request) {
 
     //On créer un nouvel uuid car c'est plus simple que de devoir le renseigner !
     u, err := uuid.NewV4()
+    rating.Id = &u
     if err != nil {
     	logrus.Errorf("failed to generate UUID: %s", err.Error())
     }
 
-	err = ratings.CreateRating(u, rating.Note, rating.Description)
+	err = ratings.CreateRating(*rating.Id, rating.Note, rating.Description)
 
 	if err != nil {
 		logrus.Errorf("error : %s", err.Error())
@@ -42,6 +43,9 @@ func CreateRating(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	w.WriteHeader(http.StatusOK)
+    w.Header().Set("Location", "/ratings/" + rating.Id.String())
+	w.WriteHeader(http.StatusCreated)
+    body, _ := json.Marshal(rating)
+    _, _ = w.Write(body)
 	return
 }
